# C_Calendar

./: CMakeLists.txt  README.md  TODO.txt  calendrier.ics  calendrier.ics~  makefile  test.ics  test2  test2.ics
headers/: agenda.h  event.h  function.h
outputs/: main  testEvent
ressources/: calendrier.ics  conception.txt  test.ics
src/: agenda.c  event.c  export.c  function.c  main.c  main_save.c
test/: testAgenda.c  testAgenda.h  testEvent.c  testEvent.h
